<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground">

    <TextView
        android:id="@+id/nas_benchmark_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/nas_benchmark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nas_is_threads_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nas_is_threads_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/nas_is_threads"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nas_benchmark_text" />

    <TextView
        android:id="@+id/nas_is_class_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nas_is_class_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/nas_is_class"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nas_is_threads"
        app:layout_constraintTop_toBottomOf="@+id/nas_benchmark" />

    <Spinner
        android:id="@+id/nas_benchmark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nas_benchmark_text"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/nas_is_threads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/nas_is_class_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nas_is_threads_text"
        app:layout_constraintTop_toBottomOf="@+id/nas_benchmark" />

    <Spinner
        android:id="@+id/nas_is_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nas_is_class_text"
        app:layout_constraintTop_toBottomOf="@+id/nas_benchmark" />

    <EditText
        android:id="@+id/http_endpoint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/http_endpoint_hint"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/http_endpoint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/http_endpoint_text"
        tools:targetApi="o" />


    <TextView
        android:id="@+id/http_endpoint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/http_endpoint"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nas_is_threads" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/compute"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/compute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:focusable="auto"
        android:text="@string/button_compute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/http_endpoint" />

    <EditText
        android:id="@+id/matrix_timing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/matrix_timing"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compute"
        tools:targetApi="o" />


</androidx.constraintlayout.widget.ConstraintLayout>